--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./"
+    "start": "node ./",
+    "build": "sc -p ."
   },
   "author": "João Witcel",
   "license": "ISC",
