--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "author": "João Witcel",
   "license": "ISC",
   "devDependencies": {
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.6",
     "@types/pg": "^8.6.5",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "config": "^3.3.7",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
